# orka

./: .gitignore  CMakeLists.txt  Readme.md  build-stdlib.sh  first.ok  install-stdlib.sh  install.sh  test.sh
compiler/: Builder.cpp  CMakeLists.txt  Compiler.cpp  Compiler.hpp  Flow.cpp  Function.cpp  builder.cpp  compiler.cpp  compiler.hpp  flow.cpp  ltac.hpp  ltac_debug.cpp
compiler/LLIR/: CMakeLists.txt  LLIR.hpp  LLIRBuilder.cpp  LLIRBuilder.hpp  LLIRCompiler.cpp  LLIRCompiler.hpp  LLIRDebug.cpp  PASM.hpp  PASMDebug.cpp  X86Writer.cpp  X86Writer.hpp
compiler/LLIR/Amd64/: AMD64_IR.hpp  AMD64_Writer.cpp  AMD64_Writer.hpp
compiler/LLIR/LLIR/: IRBuilder.hpp  Type.hpp
compiler/LLVM/: Builder.cpp  Compiler.cpp  Compiler.hpp  Flow.cpp  Function.cpp
compiler/amd64/: amd64.cpp  amd64.hpp
corelib/: io.c  str.c  sys.c  syscall_x86.asm
frontend/: CMakeLists.txt  ast.hpp  ast_function.cpp  debug.cpp  frontend.cpp  frontend.hpp  lex.cpp  lex.hpp  llir.hpp  llir_writer.cpp
frontend/ast/: Expression.hpp  Global.hpp  Statement.hpp  Types.hpp
frontend/debug/: AstDebug.cpp  LexDebug.cpp
frontend/error/: Manager.cpp  (+1 more)
ide/: CMakeLists.txt
ide/src/: CMakeLists.txt  actions.cpp  actions.hpp  editor.cpp  editor.hpp  statusbar.hpp  tabwidget.cpp  tabwidget.hpp  window.cpp  window.hpp
ide/src/menubar/: dosiero_menuo.cpp  dosiero_menuo.hpp  edit_menu.cpp  edit_menu.hpp  edito_menuo.cpp  edito_menuo.hpp  file_menu.cpp  file_menu.hpp
llir/: CMakeLists.txt  base.hpp  debug.cpp  main.cpp  type.hpp
src/: CMakeLists.txt  llir_main.cpp  main.cpp
stdlib/: io.c
(+73 files in other folders)
